--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 blinker==1.6.2
 click==8.1.6
+contourpy==1.2.0
+cycler==0.12.1
 Flask==2.3.2
+fonttools==4.46.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.1
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 numpy==1.25.1
+packaging==23.2
 pandas==2.0.3
+Pillow==10.1.0
+pip-autoremove==0.10.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.1
 scikit-learn==1.3.0
 scipy==1.11.1
+seaborn==0.13.0
 six==1.16.0
 sklearn==0.0.post7
 threadpoolctl==3.2.0
